# gcp-logger

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .pytest.ini  LICENSE.txt  Makefile  README-build.md  README.md  basic_usage.py  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: deploy-staging.yml
examples/: basic_example.py  basic_usage.py  fastapi_example.py  flask_example.py
src/: pyproject.toml
src/gcp_logger/: __init__.py  async_uploader.py  colored_formatter.py  context_aware_logger.py  custom_logging_handler.py  gunicorn_integration.py  internal_logger.py  levels.py  logger.py  logger_adapter.py
src/superlogs/: __init__.py
tests/: conftest.py  test_async_uploader.py  test_colored_formatter.py  test_context_aware_logger.py  test_custom_cloud_logging_handler.py  test_gcp_logger.py  test_gcp_logger_adapter.py  test_gcp_logger_performance.py  test_internal_logger.py  test_levels.py  test_superlogs.py
